Added unplugged project

--- a/index.html
+++ b/index.html
@@ -325,6 +325,48 @@
               </div>
             </div>
           </div>
+          <!-- Image 6 -->
+          <div class="col-12 col-md-6 mb-4">
+            <div class="card">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/132/594/original/portfolio-unplugged.png?1720645392"
+                class="card-img-top"
+                alt="Image 6"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Unplugged</h3>
+                <ul class="skills-used">
+                  <li>Flexbox</li>
+                  <li>Media Queries</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                </ul>
+                <p class="card-text">
+                  A responsive website for a fictitious corporate retreat using
+                  flexbox, media queries, and breakpoints for desktop, tablet,
+                  and mobile screen sizes.
+                </p>
+                <div class="card-links">
+                  <a
+                    href="https://github.com/stephanieparra/unplugged"
+                    title="github-repo"
+                    class="github-repo-link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >GitHub Repo</a
+                  >
+                  <a
+                    href="https://unplugged-responsive.netlify.app"
+                    title="live-version-link"
+                    class="live-version-link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Live Version</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
