Changed meta description

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="src/styles.css" />
     <meta
       name="description"
-      content="Stephanie Parra is a frontend developer focused on accessibility, optimal user experience
+      content="Stephanie Parra is a frontend developer interested in accessibility, optimal user experience
         & delightful design. She is based in Los Angeles."
     />
     <title>Frontend Developer | Stephanie Parra</title>
