Added resume pdf link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             >Contact
           </a>
           <a
-            href="https://docs.google.com/document/d/14M2HkDyGwcutlm15QcJKyM9OGi4RuG2qZ_Pxxr1RzoE/edit?usp=sharing"
+            href="https://pdflink.to/stephanieparraresume8-24/"
             target="_blank"
             title="Resume"
             class="secondary-button btn-group"
