Edited about me section

--- a/index.html
+++ b/index.html
@@ -378,9 +378,8 @@
         <div class="row">
           <div class="col-lg-6">
             <p>
-              Hi 👋🏼, I’m Stephanie Parra, a junior software developer with
-              experience in frontend and a keen interest in UX and accessible
-              design.<br />
+              Hi 👋🏼, I’m Stephanie Parra, a frontend developer interested in
+              inclusive and accessible design.<br />
               <br />
               I’ve been working with analytical, creative problem-solving
               processes, and creating safe, inclusive environments for 8+ years,
@@ -402,13 +401,13 @@
               engineering internship, joined two social issue-based
               design-a-thons, did a career day for high school kids, and am
               excited to join a team where I can continue building, learning and
-              challenging myself, especially in the field of edu-tech!<br />
+              challenging myself, especially in the field of Edtech!<br />
               <br />
-              Connect with me to talk about making tech accessible & fun. <br />
+              Connect with me to talk about making tech education fun! <br />
               <br />
               When I’m not coding or creating sites for small businesses, you’ll
-              find me learning Unity, 🕹️ working out, 🏋🏻‍♀️ and trying new recipes
-              in the kitchen! 👩🏻‍🍳<br />
+              find me learning Wordpress 💻, working out 🏋🏻‍♀️, and trying new
+              recipes in the kitchen! 👩🏻‍🍳<br />
               <br />
               I'm open to full-time frontend developer roles. ✅
             </p>
