Edited header text

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     </nav>
     <div class="hero">
       <h1 class="text-center">
-        Frontend developer 👩🏻‍💻 with UX experience. Based in Los Angeles.🌴
+        Hi, I'm Stephanie and I'm a frontend developer 👩🏻‍💻 based in Los
+        Angeles.🌴
       </h1>
       <div class="hero-buttons">
         <div class="btn-group">
