--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
     </nav>
     <div class="hero">
       <h1 class="text-center">
-        Hi, I'm Stephanie and I'm a frontend developer 👩🏻‍💻 based in Los
-        Angeles.🌴
+        I'm Stephanie, a frontend developer 👩🏻‍💻 based in Los Angeles.🌴
       </h1>
       <div class="hero-buttons">
         <div class="btn-group">
