Shortened about me text

--- a/index.html
+++ b/index.html
@@ -378,38 +378,16 @@
         <div class="row">
           <div class="col-lg-6">
             <p>
-              Hi 👋🏼, I’m Stephanie Parra, a frontend developer interested in
-              inclusive and accessible design.<br />
-              <br />
-              I’ve been working with analytical, creative problem-solving
-              processes, and creating safe, inclusive environments for 8+ years,
-              initially during my degree in Sociology, where I quickly learned
-              the positive impact of equitable technology for all
-              communities.<br />
-              <br />
-              After graduating, I pursued a career in the food industry, and
-              found myself looking at many government sites that were supposed
-              to help people find or access food but didn’t exactly make it
-              easy. Besides poor UX being a major hindrance, I also realized
-              that food wasn’t accessible for certain populations because tech
-              education & tech literacy weren’t either! (It all goes
-              hand-in-hand!) <br />
-              <br />
-              I became obsessed with advocating for tech education for all even
-              more so, especially for soon-to-be young STEAMers. I enrolled in 2
-              intensive coding bootcamps, built six React apps, got a software
-              engineering internship, joined two social issue-based
-              design-a-thons, did a career day for high school kids, and am
-              excited to join a team where I can continue building, learning and
-              challenging myself, especially in the field of Edtech!<br />
-              <br />
-              Connect with me to talk about making tech education fun! <br />
-              <br />
-              When I’m not coding or creating sites for small businesses, you’ll
-              find me learning Wordpress 💻, working out 🏋🏻‍♀️, and trying new
-              recipes in the kitchen! 👩🏻‍🍳<br />
-              <br />
-              I'm open to full-time frontend developer roles. ✅
+              Hi 👋🏼, I’m Stephanie Parra, a frontend developer passionate about inclusive and accessible design. My journey began with a Sociology degree, where I saw firsthand how equitable technology can positively impact communities. After graduating, I worked in the food industry, noticing how poor UX and limited tech literacy affected access to food-based resources.
+              </br>
+              </br>
+              Driven to make a difference, I dove into tech education & social issue advocacy. I completed two intensive coding bootcamps, built React apps, gained experience through a software engineering internship, and participated in design-a-thons focused on social issues. I’m eager to join a team in EdTech, HealthTech and more, where I can continue learning and creating impactful solutions.
+              </br>
+              </br>
+              Outside of work, I enjoy working out 🏋🏻‍♀️ and experimenting with new recipes 👩🏻‍🍳.
+              </br> 
+              </br>
+              I’m open to full-time frontend developer roles. ✅ Let’s connect!
             </p>
           </div>
           <div
