Edited about me and header text

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </nav>
     <div class="hero">
       <h1 class="text-center">
-        I'm Stephanie, a frontend developer 👩🏻‍💻 based in Los Angeles.🌴
+        Hi, I'm Stephanie 👋🏼, a frontend developer 👩🏻‍💻 based in Los Angeles.🌴
       </h1>
       <div class="hero-buttons">
         <div class="btn-group">
@@ -387,7 +387,10 @@
               Outside of work, I enjoy working out 🏋🏻‍♀️ and experimenting with new recipes 👩🏻‍🍳.
               </br> 
               </br>
-              I’m open to full-time frontend developer roles. ✅ Let’s connect!
+              I’m open to full-time frontend developer roles. ✅
+              </br> 
+              </br> 
+              Let’s connect!
             </p>
           </div>
           <div
