added alt text for images

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/131/828/original/portfolio-dictionary.png?1720216375"
                 class="card-img-top"
-                alt="Image 1"
+                alt="dictionary-project-image"
               />
               <div class="card-body">
                 <h3 class="card-title">Dictionary App</h3>
@@ -158,7 +158,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/131/827/original/portfolio-weather.png?1720216315"
                 class="card-img-top"
-                alt="Image 2"
+                alt="react-weather-project-image"
               />
               <div class="card-body">
                 <h3 class="card-title">Weather App</h3>
@@ -205,7 +205,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/131/829/original/portfolio-stickynotes.png?1720216434"
                 class="card-img-top"
-                alt="Image 3"
+                alt="sticky-notes-project-image"
               />
               <div class="card-body">
                 <h3 class="card-title">Sticky Notes</h3>
@@ -245,7 +245,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/131/830/original/portfolio-github.png?1720216504"
                 class="card-img-top"
-                alt="Image 4"
+                alt="github-repo-gallery-project-image"
               />
               <div class="card-body">
                 <h3 class="card-title">Github Repo Gallery</h3>
@@ -289,7 +289,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/131/831/original/portfolio-game.png?1720216570"
                 class="card-img-top"
-                alt="Image 5"
+                alt="guess-the-word-game-project-image"
               />
               <div class="card-body">
                 <h3 class="card-title">Guess the Word Game</h3>
@@ -331,7 +331,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/132/594/original/portfolio-unplugged.png?1720645392"
                 class="card-img-top"
-                alt="Image 6"
+                alt="unplugged-project-image"
               />
               <div class="card-body">
                 <h3 class="card-title">Unplugged</h3>
@@ -399,7 +399,7 @@
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/131/832/original/portfolio-headshot.png?1720216728"
               class="img-fluid profile-pic align-self-start"
-              alt="Stephanie"
+              alt="stephanie-parra-profile-image"
             />
           </div>
         </div>
